manifests/app-a/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-a
  namespace: app-a
spec:
  selector:
    app: app-a
  ports:
    - port: 80
      targetPort: 80
