manifests/app-a/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-a
  namespace: app-a
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - app-a.localhost
  rules:
    - backendRefs:
        - name: app-a
          port: 80
